beug free script and initialization issues solved

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				We are dreaming in ... <em>wiJa</em>.
 				}</p>
 				<div class="heartBeat" style="width:100%; text-align:center;margin-top:1.2em;">
-					<a href="contact.html" onclick="dopopBoxWClicked()">Get involved into Wija</a>
+					<a onclick="dopopBoxJClicked()">Learn more about wiJa</a>
 				</div>
 			</div>
 			
@@ -198,7 +198,7 @@
 				<p> 
 				Following the concept of <em>single tasking the learning content</em>, we overrided firstly the Android default keyboard.
 				we designed a personnalized keyboard with the minimal number of keys for activities. <br>
-				It improve kid interaction the learning experience, instead of relying on overcomplex multilayered default Android's keyboard.  
+				It improves user's learning experience, instead of relying on overcomplex multilayered default Android's keyboard.  
 				WiJa's app features a responsive keyboard to fit its educational purpose.  
 				</p>
 				</div>
