fix sessionStorage Edge beug very embarassing microsoft

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
 				</p>
 				</div>
 			</div>
-			<div class="arrowOuter" onclick="showHiddenText('Text014')">
+			<div class="arrowOuter">
 				<div class="arrowLine">
 				</div>
-				<div class="arrowDropText">
+				<div class="arrowDropText"  onclick="showHiddenText('Text014')">
 				</div>
 				<div class="hiddenText" id='Text014'>
 				<p> 
