removing entry scene its sucks and add icon

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 		<link href="css/style-mailbox.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="css/style-responseHttp.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link rel="icon" type="image/png" href="icons/logo.png" sizes="16x16">
 		<title>Follow wiJa</title>
 		<meta charset="UTF-8">
 	</head>
