--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<link href="css/style-arrow.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="css/style-wijaslides.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<title>wiJa's Story</title>
+		<link rel="icon" type="image/png" href="icons/logo.png" sizes="16x16">
+		<title> wiJa's Story</title>
 		<meta charset="UTF-8">
 	</head>
 	
