--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 		<link href="css/style-mobile.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<title>About wiJa</title>
+		<link rel="icon" type="image/png" href="icons/logo.png" sizes="16x16">
 		<meta charset="UTF-8">
 	</head>
 	
