fix font mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta charset="UTF-8">
 	</head>
 	
-	<body>
+	<body onload="animateOnloadAction()" onresize="onResizeAction()">
 		<div id="wrapper">
 			<div id="overlay" class="hideable"></div>
 			<div id="wijaInfo">
@@ -121,7 +121,7 @@
 				<p>
 				{
 				Till the end, wiJa is commited to avoid any advertisement. We are concerned by wild scripts injecting +18 content into three year-old apps.<br>
-				We dislike that	economic model from deep of our hearts. It is one of main reason, we develop this project. We will rise funds if necessary through
+				We dislike that	economic model from deep of our hearts. It is one of main reasons, we develop this project. We will rise funds if necessary through
 				apointed campaigns. But, we vow to never add wild ads and pop-ups in our material.<br>
 				The Dev Team.
 				}
@@ -147,7 +147,7 @@
 				</div>
 				<div class="hiddenText" id='Text011'>
 				<p> We build this project with goodwill and a lot of sweat. 
-				Starting from the ground, we implemented a simple, robust and elegant app for our beloved kids.<br>
+				Starting from the ground, we implemented a intuitive, robust and elegant app for our beloved kids.<br>
 				Then, we decided to release the app to general audience to share the educational material with the community.<br>
 				We will like to thank the dev team {MN, HP, FR} as well as benovolant testers. 
 				MN will like to dedicate wiJa to his wife for the Amazing support to the project 
@@ -164,9 +164,9 @@
 				<p> WiJa is designed like a simplified Android Phone GUI. <br>
 				The concept here is to build a environnement where kids can focus on one single task at a time. 
 				The UI channels the child into one activity with one main task and nothing else to do. This learning method is proven and widely used in schools.<br>
-				The progress of your child is assessed according to the accomplissement of the main task.
+				The progress of the child is assessed according to the accomplissement of the main task.
 				<em>Moving one step at a time</em>, your kid is learning vocabulary basics for his future life.<br>
-				Others apps are multitasking in order to trap kids in the GUI. Thus, their educational performance cannot be assessed precisely.
+				Others apps are multitasking in order to trap kids in the GUI. Thus, their educational performance cannot be assessed.
 				</p>
 				</div>
 			</div>
@@ -179,9 +179,9 @@
 				<div class="hiddenText" id='Text013'>
 				<p> 
 				Following the concept of <em>single tasking the learning content</em>, we overrided firstly the Android default keyboard.
-				we designed a personnalized keyboard with the minimal number of keys for activities. <br>
-				It improves user's learning experience, instead of relying on overcomplex multilayered default Android's keyboard.  
-				WiJa's app features a responsive keyboard to fit its educational purpose.  
+				We designed a customized keyboard with the minimal number of keys for activities. <br>
+				Then, we equiped wiJa's App with an highly responsive keyboard to fit its educational purpose.  
+				It improves user's learning experience while avoiding the use of the overcomplex multilayered default Android's keyboard.
 				</p>
 				</div>
 			</div>
@@ -192,9 +192,10 @@
 				</div>
 				<div class="hiddenText" id='Text014'>
 				<p> 
-				WiJa features a language decoding Artificial Intelligence named <em>A.L.I.</em> to improve the User Experience. An interface to this AI is embeded within the SMS activity.<br>
-				A.L.I. is assessing the child vocabulary and suggest work sessions to the child. But, A.L.I. is designed to do much more ...<br>
-				AI can actually understand human language and decide how to respond accordingly. A.L.I. is implementing advanced mathematical model to parse human language.
+				WiJa features an Artificial Intelligence named <em>A.L.I.</em> (Automated Language Interpretor) to improve the User Experience. An interface to this Artificial Intelligence
+				is embeded within the SMS activity.<br>
+				A.L.I. is assessing the child vocabulary and suggest work sessions accordyling. But, A.L.I. is designed to do much more ...<br>
+				A.L.I. can actually understand human language and decide how to respond accordingly. A.L.I. is implementing advanced mathematical model to parse human language.
 				We will publish the model and licence its usage, when funds to substain the project will be available. 
 				</p>
 				</div>
