fix contact output

--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,11 @@
 							</div>
 						</td>
 						<td>
+							<div class="mailBoxItem" >
+								<a href="javascript:void(0);"><div class="focusable"></div></a>
+							</div>
+						</td>
+						<td>
 							<div class="mailBoxItem" id="mailBoxButton">
 								<a href="javascript:void(0);" onclick="openMailBox()"><div class="focusable"><img src="icons/mail_icon.png" /></div></a>
 							</div>
@@ -111,6 +116,11 @@
 						</td>
 						<td>
 							<div class="mailBoxItem" >
+								<a href="javascript:void(0);"><div class="focusable"></div></a>
+							</div>
+						</td>
+						<td>
+							<div class="mailBoxItem" >
 								<a href="javascript:void(0);" onclick="openResponseHttp()"><div class="focusable"><img src="icons/email.png" /></div></a>
 							</div>
 						</td>
@@ -118,12 +128,17 @@
 					<tr>
 						<td>
 							<div class="mailBoxItem" >
-								<a href="javascript:void(0);"><div class="focusable"><img src="icons/work.png" /></div></a>
+								<a href="javascript:void(0);"><div class="focusable"></div></a>
 							</div>
 						</td>
 						<td>
 							<div class="mailBoxItem" >
 								<a href="javascript:void(0);"><div class="focusable"><img src="icons/work.png" /></div></a>
+							</div>
+						</td>
+						<td>
+							<div class="mailBoxItem" >
+								<a href="javascript:void(0);"><div class="focusable"></div></a>
 							</div>
 						</td>
 					</tr>
