fix animation bubble wild reload

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				</div>
 				<div class="hiddenText" id='Text011'>
 				<p> We build this project with goodwill and a lot of sweat. 
-				Starting from the ground, we implemented a intuitive, robust and elegant app for our beloved kids.<br>
+				Starting from the ground, we implemented an intuitive, robust and elegant app for our beloved kids.<br>
 				Then, we decided to release the app to general audience to share the educational material with the community.<br>
 				We will like to thank the dev team {MN, HP, FR} as well as benovolant testers. 
 				MN will like to dedicate wiJa to his wife for the Amazing support to the project 
@@ -162,7 +162,7 @@
 				</div>
 				<div class="hiddenText" id='Text012'>
 				<p> WiJa is designed like a simplified Android Phone GUI. <br>
-				The concept here is to build a environnement where kids can focus on one single task at a time. 
+				The concept here is to build an environnement where kids can focus on one single task at a time. 
 				The UI channels the child into one activity with one main task and nothing else to do. This learning method is proven and widely used in schools.<br>
 				The progress of the child is assessed according to the accomplissement of the main task.
 				<em>Moving one step at a time</em>, your kid is learning vocabulary basics for his future life.<br>
@@ -171,7 +171,6 @@
 				</div>
 			</div>
 			<div class="arrowOuter">
-				<!-- <p>Learn more about wiJa right here >></p> -->
 				<div class="arrowLine">
 				</div>
 				<div class="arrowDropText" onclick="showHiddenText('Text013')">
