add text babbling

--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
 				The content of these ads cannot be supervised by the parents. And kids are at risk and not ready for that. We stepped up against that with this wiJa's project. 
 				<br><span><a id="textBox002_more" onclick="appendText('textBox002')"> learn more >></a></span></p>
 				<p id="textBox002_next" style="display:none">
-				Other apps are multitasking in order to trap your kids in the GUI. 
-				Thus, their educational performance cannot be assessed precisely.
+				We vow to never add any advertisement in our material. We are more concerned about your kids learning something from wiJa than making money out of it.
+				wiJa's project is founded on donation and a lot of love. Please share it.
 				<br><span><a id="textBox002_less" onclick="hideText('textBox002')"> less <<</a></span></p>				
 				</div>
 				<div class="textBox">
@@ -99,16 +99,16 @@
 				task. When he has finished, he may leave anytime.
 				<br><span><a id="textBox003_more" onclick="appendText('textBox003')"> learn more >></a></span></p>
 				<p id="textBox003_next" style="display:none">
-				Other apps are multitasking in order to trap your kids in the GUI. 
-				Thus, their educational performance cannot be assessed precisely.
+				Your child is interacting freely with wiJa. If he get bored it's fine. We don't want to catch him around too long as others Apps doing with perfectly timed animations.
 				<br><span><a id="textBox003_less" onclick="hideText('textBox003')"> less <<</a></span></p>
 				</div>
 				<div class="textBox">
 				<h5> - supervised content - </h5>
 				<p id="textBox004">Lastly, we are responsible for the content of the app and the educational material within. We will like your return to improve it.
-				<br><span><a id="textBox004_more" onclick="appendText('textBox004')"> learn more >></a></span></p>				<p id="textBox004_next" style="display:none">
-				Other apps are multitasking in order to trap your kids in the GUI. 
-				Thus, their educational performance cannot be assessed precisely.
+				<br><span><a id="textBox004_more" onclick="appendText('textBox004')"> learn more >></a></span></p>
+				<p id="textBox004_next" style="display:none">
+				We are working with linguists and parents to set the perfect material for kids. We are developping algorithms to filter language insanity. We added already
+				an extensible database of fundamental vocubulary.
 				<br><span><a id="textBox004_less" onclick="hideText('textBox004')"> less <<</a></span></p>
 				</div>
 			</div>
