fix script issues detected with the debugger

--- a/about.html
+++ b/about.html
@@ -73,43 +73,43 @@
 				<h5> - wiJa's design - <span><img src="icons/androidBot.bmp"/></span></h5>
 				<p id="textBox001"> The project wiJa is to improve learning skills of kids while they are having fun. We are regular parents and we design our Android App with perfect content for children.
 				wiJa App is designed as a simplified Android Phone GUI. WiJa deploys a safe environnement where kids can focus on one single task at a time. 
-				<br><span><a id="textBox001_more" onclick="appendText('textBox001')"> learn more >></a></span></p>
+				<br><span><a id="textBox001_more" onclick="appendText('textBox001')"> learn more &gt;&gt; </a></span></p>
 				<p id="textBox001_next" style="display:none">
 				The App's UI channels the child into one activity with one main task and nothing else to do. This learning method is tested, proven and widely used in schools. 
 				The progress of your child is assessed according to the accomplissement of main task.
 				Other apps are multitasking in order to trap your kids in the GUI. 
 				Thus, their educational performance cannot be assessed precisely.
-				<br><span><a id="textBox001_less" onclick="hideText('textBox001')"> less <<</a></span></p>
+				<br><span><a id="textBox001_less" onclick="hideText('textBox001')"> less &lt;&lt;</a></span></p>
 				
 				</div>
 				<div class="textBox">
 				<h5> - ads free - <span><img src="icons/noAds.bmp"/></span></h5> 
 				<p id="textBox002">First of all, our app is free from advertisements and disturbing information for young kids. We are appalled by wild ads poping out in regular Android apps for kids. 
 				The content of these ads cannot be supervised by the parents. And kids are at risk and not ready for that. We stepped up against that with this wiJa's project. 
-				<br><span><a id="textBox002_more" onclick="appendText('textBox002')"> learn more >></a></span></p>
+				<br><span><a id="textBox002_more" onclick="appendText('textBox002')"> learn more &gt;&gt; </a></span></p>
 				<p id="textBox002_next" style="display:none">
 				We vow to never add any advertisement in our material. We are more concerned about your kids learning something from wiJa than making money out of it.
 				wiJa's project is founded on donation and a lot of love. Please share it.
-				<br><span><a id="textBox002_less" onclick="hideText('textBox002')"> less <<</a></span></p>				
+				<br><span><a id="textBox002_less" onclick="hideText('textBox002')"> less &lt;&lt; </a></span></p>				
 				</div>
 				<div class="textBox">
 				<h5> - no jailing animations - </h5>
 				<p id="textBox003">Secondly, a sober design was prefered to help kids to navigate easily through the whole app. WiJa's apps are not saturated with attention drawing animations. 
 				Kids are free to get in and get out of wiJa thanks to the pure design. We don't want your kids to get trapped by wild animations running around. We keep your kid focus on scheduled
 				task. When he has finished, he may leave anytime.
-				<br><span><a id="textBox003_more" onclick="appendText('textBox003')"> learn more >></a></span></p>
+				<br><span><a id="textBox003_more" onclick="appendText('textBox003')"> learn more &gt;&gt; </a></span></p>
 				<p id="textBox003_next" style="display:none">
 				Your child is interacting freely with wiJa. If he get bored it's fine. We don't want to catch him around too long as others Apps doing with perfectly timed animations.
-				<br><span><a id="textBox003_less" onclick="hideText('textBox003')"> less <<</a></span></p>
+				<br><span><a id="textBox003_less" onclick="hideText('textBox003')"> less &lt;&lt;</a></span></p>
 				</div>
 				<div class="textBox">
 				<h5> - supervised content - </h5>
 				<p id="textBox004">Lastly, we are responsible for the content of the app and the educational material within. We will like your return to improve it.
-				<br><span><a id="textBox004_more" onclick="appendText('textBox004')"> learn more >></a></span></p>
+				<br><span><a id="textBox004_more" onclick="appendText('textBox004')"> learn more &gt;&gt; </a></span></p>
 				<p id="textBox004_next" style="display:none">
 				We are working with linguists and parents to set the perfect material for kids. We are developping algorithms to filter language insanity. We added already
 				an extensible database of fundamental vocubulary.
-				<br><span><a id="textBox004_less" onclick="hideText('textBox004')"> less <<</a></span></p>
+				<br><span><a id="textBox004_less" onclick="hideText('textBox004')"> less &lt;&lt; </a></span></p>
 				</div>
 			</div>
 			</div>
