fix IE 3D transform crash

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
 					<a onclick="dopopBoxWClicked()">Get into Wija's Story</a>
 				</div>
 			</div>
-			
 			<div class="popBox hideable" id="wijaBox_I" onclick="popBoxClicked()">
 				<h5><strong>I</strong>nnovative design </h5>
 				<p>
@@ -138,6 +137,19 @@
 					<div class="bottom">&nbsp;</div>
 				</div>
 			</div>
+			
+			<div class="notificationBox">
+				<h5>WARNING!</h5>
+				<p>If your using Internet Explorer, your browser won't fully support animations on the website due to a beug in the browser! 
+				It is very embarassing for the standard browser of windows.<br>
+				Microsoft don't want to correct beugs inside the browser Internet Explorer. Since five years, a huge beug in the
+				browser have been reported to the developers team of microsoft. Actually all the browsers but IE support 3D transforms. Microsoft
+				is ducking non corporate developers like us. We just expect IE reach the MDN standard like other browsers on the market.<br>
+				Please don't get frustrated with IE just switch to another well-known and well maintained browser like firefox. Then everything will work fine.
+				</p>
+			</div>
+			<script src="js/testCrappyBrowser.js"></script>
+			
 			<div id="arrowDropTextWrapper">
 			<h5> Dashboard </h5>
 			<div class="arrowOuter">
