add responsive small screen style

--- a/error.html
+++ b/error.html
@@ -7,19 +7,20 @@
 	<body>
 		<div id="wrapper">
 			<div id="content">
-				<h4>Error 403</h4>
+				<h4>Error 403: forbidden</h4>
 				<p class="error_text">
 					Sorry, can't load the website properly.<br>
 					Please do the following before leaving us:</p>
 					<ul>
-						<li>check your connection cable/wifi</li>
+						<li>try to connect with <a href=https://www.wijaapp4kids.com>https://www.wijaapp4kids.com</a></li>
+						<li>else, check your connection cable/wifi</li>
 						<li>and do the following ping test: <h6>&nbsp &nbsp> ping wijaapp4kids.com</h6></li>
 						<li>the connection time should be of couple of milliseconds,</li>
 						<li>if not something is <strong>truly</strong> going wrong,</li>
 						<li>ping another fameous website (google,facebook,yahoo...) in order to check,
 						if the ping time recorded is in agreement with your overwhole ping times.</li>
 						<li>ultimately, change your browser to confirm the connection issues</li>
-						<li>if the troubleshoot goes on, well, the Amazon's server just breakdown ...</li>
+						<li>if the troubleshoot goes on, well, the Amazon's router just breakdown ...</li>
 					</ul>
 				
 				<!-- <div id="ballWrapper" class="spinable" ><img src="icons/rainbow_ball.jpg" /></div> -->
