--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			
 			<div class="notificationBox">
 				<h5>WARNING!</h5>
-				<p>If your using Internet Explorer, your browser won't fully support animations on the website due to a beug in the browser! 
+				<p>If you are using Internet Explorer, your browser won't fully support animations on the website due to a beug in the browser! 
 				It is very embarassing for the standard browser of windows.<br>
 				Microsoft don't want to correct beugs inside the browser Internet Explorer. Since five years, a huge beug in the
 				browser have been reported to the developers team of microsoft. Actually all the browsers but IE support 3D transforms. Microsoft
