--- a/contact.html
+++ b/contact.html
@@ -73,11 +73,11 @@
 				<div id="mailBox" class="hideable">
 				  <form id="formMailBox">
 					<label for="fname">First Name</label>
-					<input type="text" id="fname" name="firstname" placeholder="Your name..">
+					<input type="text" id="fname" name="firstname" placeholder="Your name.." required>
 					<label for="lname">Last Name</label>
-					<input type="text" id="lname" name="lastname" placeholder="Your last name..">
+					<input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
 					<label for="lname">E-mail</label>
-					<input type="text" id="email" name="e-mail" placeholder="Your e-mail please..">
+					<input type="text" id="email" name="e-mail" placeholder="Your e-mail please.." required>
 					<label for="ltext">Comment</label>
 					<textarea  name="comment" placeholder="add your comment here..."> </textarea>				  
 					<input class="enabledBtn" type="button" id="submitButton" name="submitButton" onclick="submitComment()" value="submit">
