--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 		<link href="css/style-table.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="css/style-mailbox.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="css/style-responseHttp.css" rel="stylesheet" type="text/css" media="screen">
+		<link href="css/style-ratings.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="icon" type="image/png" href="icons/logo.png" sizes="16x16">
 		<title>Follow wiJa</title>
@@ -148,6 +149,15 @@
 				<div class="notificationBox">
 					<p>coucou!</p>
 				</div>
+				<div id="CommunityRatings">
+				<h5> The Community Ratings 
+				<span class="compact"><i class="material-icons starRate">star</i></span>
+				<span class="compact"><i class="material-icons starRate">star</i></span>
+				<span class="compact"><i class="material-icons starRate">star</i></span>
+				<span class="compact"><i class="material-icons starRate">star</i></span>
+				</h5>
+				</div>
+				<script src="js/loadCommunityRatings.js"></script>
 			</div>
 			
 			<div id="footer">
